--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@
 .green {
     color: green;
 }
+
+.myStyle{
+    width: 300px;
+    height: 50px;
+    background-color: cornflowerblue;
+    color: crimson;
+    font-size: 25px;
+}
