added css to make it easier to read

--- a/assets/exo.css
+++ b/assets/exo.css
@@ -4,3 +4,11 @@
     padding-left: 5px;
     border: 1px dotted black;
 }
+
+.exo{
+    margin-bottom: 150px;
+}
+
+.part{
+    margin-top: 100px;
+}
